2022-November-13 Struan Robertson

		* MolecularComponent.h/.cpp and assocated files: Further changes to improve
		"include" discipline.

		* Documentation update.

2022-November-06 Struan Robertson

		* DensityOfStates.h/.cpp, System.cpp, ExponentialDown.cpp, BiExponetialDown.cpp,
		main.cpp, Rdouble.h, Morse.cpp, UnitTest.cpp, HinderedRotorUtils.cpp
		ThermodynamicTables.cpp: Include discipline changes.

2022-October-23 Struan Robertson

		* MesmerMaths.h/.cpp: Further fixes for Fourier coefficients with unevenly
		spaced data.

2022-September-07 Struan Robertson

		* MesmerMaths.cpp: Initial fix for Fourier coefficients with unevenly spaced
		data.

2022-August-21 Struan Robertson

		* CollisionOperator.cpp, MesmerEnv.h/.cpp, gWellTransition.h: Minor updates 
		related to radiation transitions.

		* Documentation update.

2022-May-29 Struan Robertson

		* ConditionsManager.cpp, System.cpp: Further implementation of excess species 
		concentration definition.

2022-May-29 Struan Robertson

		* ConditionsManager.cpp, Reaction.cpp, ReactionManager.cpp, MesmerILT.cpp: 
		Initial implementation of excess species concentration definition.

		* ParallelManager.h: Correction for Debug build.

2022-May-22 Struan Robertson

		* Compiler fixes for Linux 64.

		* Baseline update.

2022-May-21 Struan Robertson

		* ConditionsManager.h/.cpp: Further prepartory work for specifying spectator 
		species concentrations as a percentage of total concentration.

		* Baseline update.

		* Documentation update: Inappropriate use of reservoir state removed.

2022-May-15 Struan Robertson

		* ConditionsManager.h/.cpp, Reaction.h/.cpp and derived reaction classes: Initial 
		work toward specifying spectator species concentrations as a percentage of total 
		concentration.

		* Glyoxal_Exchange.xml: Inappropriate use of reservoir state removed.

2022-May-04 Struan Robertson

		* PriorDistFragmentation.cpp: Update of fragmentation distribution output.

2022-May-02 Struan Robertson
