@@ -5,7 +5,6 @@
 
 using namespace std;
 using namespace Constants;
-using namespace OpenBabel;
 namespace mesmer
 {
 
